<resources>
    <string name="app_name">uSafeNH</string>
    <string name="UNH">University of New Hampshire</string>
    <string name="Saint_Anselm">Saint Anselm College</string>
    <string name="Keene_State">Keene State College</string>
    <string name="White_Mountain">White Mountain Community College</string>
    <string name="Local_police">Local Police</string>
    <string name="Campus_resources">Campus Resources</string>
    <string name="Local_hospital">Local Hospitals</string>
    <string name="Crisis_centers">Crisis Centers</string>
    <string name="help_now_button">Get Help Now</string>
    <string name="help_someone">Help Someone You Know</string>
    <string name="faq">FAQ</string>
    <string name="faq_self">FAQ for Myself</string>
    <string name="details_button">View Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="usafe">uSafeNH</string>
    <string name="usafe_website">http://www.nhcadsv.org/</string>
    <string name="Invalid_info">No info found.</string>
    <string name="UNH_Local_police">
        UNH Police Department\n
        Address:\n
        \t\t18 Waterworks Road, Durham, NH, 03824\n
        Phone:\n
        \t\t(603)-862-1427
    </string>
    <string name="UNH_Campus_resources">
        Campus Safety\n
        Phone:\n
        \t\t(603)-862-1427\n
        In Emergency: 911\n
        Website:\n
        \t\thttp://www.unh.edu/upd
    </string>
    <string name="UNH_Local_hospital">
        Wentworth-Douglas Hospital\n
        Address:\n
        \t\t789 Central Ave, Dover, NH, 03820\n
        Phone:\n
        \t\t(603)-742-5252\n
        Website:\n
        \t\thttp://www.wdhospital.com/Contact
    </string>
    <string name="UNH_Crisis_centers">
        Sexual Harrassment and Rape Prevention Program (SHARPP)\n
        Address:\n
        \t\t8 Ballard Street, Durham, NH, 03824\n
        Phone:\n
        \t\t1-888-271-7233\n
        Website:\n
        \t\thttp://www.unh.edu/sharpp/
    </string>
    <string name="Keene_State_Local_police">
        Keene Police Department\n
        Address:\n
        \t\t400 Marlboro St., Keene, NH 03431\n
        Contact:\n
        \t\t(603)-357-9815
    </string>
    <string name="Keene_State_Campus_resources">
        Counseling Center\n
        Address:\n
        \t\tElliot Center (3rd Floor) / 229 Main St., Keene, NH 03435\n
        Contact:\n
        \t\t(603)-358-2437 / Crisis Line: 603-358-2436
    </string>
    <string name="Keene_State_Local_hospital">
        Cheshire Medical Center\n
        Address:\n
        \t\t580 Court St., Keene, NH 03431\n
        Contact:\n
        \t\t(603)-354-6600
    </string>
    <string name="Keene_State_Crisis_centers">
        Monadnock Center for Violence Prevention (MCVP):\n
        Address:\n
        \t\t12 Court St., Keene, NH 03431\n
        Contact:\n
        \t\t(603)-352-3782
    </string>
    <string name="Saint_Anselm_Local_police">
        Gofftstown Police Department \n
        Address:\n
        \t\t 326 Mast Rd, Gofftstown, NH 03045\n
        Contact:\n
        \t\t(603)-497-4858
    </string>
    <string name="Saint_Anselm_Campus_resources">
        Campus Safety \n
        Contact:\n
        \t\t(603)-641-7000 or ext x555 \n
        Website:\n
        \t\thttp://www.anselm.edu/Current-Students/Campus-Safety-and-Parking.htm
    </string>
    <string name="Saint_Anselm_Local_hospital">
        Catholic Medical Center \n
        Address:\n
        \t\t100 McGregor Street, Manchester, NH, 03102\n
        Contact:\n
        \t\t800-437-9666
    </string>
    <string name="Saint_Anselm_Crisis_centers">
        YWCA Crisis Service\n
        Contact:\n
        \t\t(603)-668-2299\n
        Website:\n
        \t\twww.ywcanh.org\n
        Address:\n
        \t\t72 Concord Street Manchester, NH, 03101\n\n
        Serves Northern HIllsborough County, including the greater Manchester area.
    </string>
    <string name="White_Mountain_Local_police">
        Berlin Police Department\n
        Address:\n
        \t\t\135 Green St., Berlin, NH, 03570\n
        Contact:\n
        \t\t(603)-752-3131
    </string>
    <string name="White_Mountain_Campus_resources">
        Campus Safety\n
        Contact:\n
        \t\t9-911(using a campus phone)\n
        Website:\n
        \t\thttp://wmcc.edu/student-services/campus-safety
    </string>
    <string name="White_Mountain_Local_hospital">
        Androscoggin Valley Hospital\n
        Address:\n
        \t\t59 Page Hill Rd., Berlin, NH, 03570\n
        Contact:\n
        \t\t(603)-752-2200
    </string>
    <string name="White_Mountain_Crisis_centers">
        Response to Sexual and Domestic Violence\n
        Contact:\n
        \t\t1-866-662-4220\n
        Website\n
        \t\twww.coosfamilyhealth.org/response.html\n
        Address:\n
        \t\t54 Willow Street Berlin, NH, 03570\n\n
        Serves Coos County.
    </string>
    <string name="Category_I_Was_Just">I was just assaulted and what should I do?</string>
    <string name="Category_What_Is">What is ...</string>
    <string name="Category_College_Policy">College policy and support groups</string>
    <string name="Category_Helping_Others">Helping others</string>
    <string name="Category_Misc">Miscellaneous</string>
    <string name="q1">Was I sexually assaulted?</string>
    <string name="a1">\n• The term sexual assault refers to any sexual contact that occurs without explicit consent. Sexual assault can take many forms, but it is never the victim’s fault. Forms of sexual assault include: penetration of the victim’s body (also known as rape), attempted rape, forcing a victim to perform sexual acts, and fondling or unwanted sexual touching.</string>
    <string name="q2">What is consent?</string>
    <string name="a2"> \n• Consent is two people (or more) deciding together to do the same thing, at the same time, in the same way, with each other, without coercion, intimidation, manipulation, physical force, power disparity, mental illness, incapacitation, intoxication, and/or threats. \n \n
        • Consent is active, not passive. There must always be active consent on both sides. A person who consents has the right to change their mind at any point in time. If they do, the sexual activity must stop immediately. \n \n
        • In New Hampshire, the legal age of consent is 16.</string>
    <string name="q3">Is it still considered sexual assault if it was my acquaintance, friend, or romantic partner?</string>
    <string name="a3">\n• Yes. Approximately two thirds of all sexual assaults are perpetrated by someone who the survivor knows. \n \n
        [SOURCE: U.S. Department of Justice, National Crime Victimization Study: 2009-2013]</string>
    <string name="q4">I was just sexually assaulted. What do I do?</string>
    <string name="a4">\n• Go to a safe place. \n \n
        • If you want to report the crime, notify the police immediately. Reporting the crime can help you regain a sense of personal power and control. \n \n
        • Call a friend, a family member, or someone else you trust who can be with you and provide support. \n \n
        • Preserve all physical evidence of the assault. Do not shower, bathe, douche, eat, drink, wash your hands, or brush your teeth until after you have had a medical examination. Save all of the clothing you were wearing at the time of the assault. Do not clean or disturb anything in the area where the assault occurred. \n \n
        • Seek medical care as soon as possible. Go to a hospital emergency department or doctor\'s office. Even if you think you do not have any physical injuries, it is important to hae a medical examination and discuss with a health care provider the risk of exposure to sexually transmitted infections and the possibility of pregnancy resulting from the sexual assault. Having a medical exam is also a way for you to preserve physical evidence of a sexual assault. \n\n
        • If you suspect that you may have been given a "rape drug", ask the hospital or clinic where you receive medical care to take a urine sample. Drugs, such as Rophynol and GHB, are more likely to be detected in urine than in the blood. \n\n
        • After a sexual assault, you have a lot of choices and decisions to make about getting medical care, making a police report, and informing others. You may have concerns about the impact of the assault and the reactions of friends and family members. You can get the information by calling a rape crisis center, a hotline, or other victim assistance agencies. \n\n
        [SOURCE: Adapted from the Rape, Abus, and Incest National Network[RAINN]Website for N.H. College Students]</string>
    <string name="q5">How do I file a report? What are my options?</string>
    <string name="a5">\n <b>Report to Law Enforcement</b> \n\n
        • An officer will meet with you in a safe place to take a brief, initial report. They will also encourage you to seek medical attention to ensure that you receive proper care and follow up. They will assist you in obtaining medical care at the appropriate facility. The officer will also ensure that a local crisis center advocate is contacted to be with you for as long as you would like. \n\n
        • Arrangements will be made with you to meet in the near future with the investigating officer or detective assigned to follow up on the initial report. this will involve a more detailed interview about what happened. NH best practice allows for a crisis center advocate to be present with the victim, if the victim desires, during the interview process. \n\n
        • An investigative follow up will occur with the collection of evidence, contact with potential witnesses and the suspect, as well as a complete and thorough documentation. \n\n
        • At any point during the investigation, law enforcement may consult with a prosecutor to determine the next steps, make decisions about a possible arrest and/or prosecution of the crime. The victim should be kept informed about the status of their case and can also contact the investigator if they have questions.\n\n\n
        <b>Have A Forensic Exam Kit Done Anonymously</b> \n\n
        • A person who is 18 years old or more and has been sexually assaulted in New Hampshire can contact law enforcement to ask questions about the reporting process without identifying themselves in an effort to determine if they want o come forward and make a formal report. They may also provide some information about what happened to them during this conversation. However, law enforcement cannot proceed with an investigation without an identified victim. \n\n
        • Not Report to law enforcement.</string>
    <string name="q6">How long do I have to report?</string>
    <string name="a6">\n• In New Hampshire, the statute of limitations for Aggravated Felonious Sexual Assault and Felonious Sexual Assault is 6 years. \n\n
        • The statute of limitations for Sexual Assault is 1 year.
        • If the victim is under the age of 18 at the time of their assault, the statute of limitations is 22 years after their 18th birthday (until age 40).</string>
    <string name="q7">What will happen if I go to the hospital?</string>
</resources>