<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:padding="10dp"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:id="@+id/Crisis_centers"
        android:text="@string/Crisis_centers"
        android:background="#1DE9B6"
        android:layout_below="@+id/Local_police"
        android:layout_toLeftOf="@+id/Local_hospital"
        android:layout_toStartOf="@+id/Local_hospital"
        android:layout_centerInParent="true" />

    <Button
        android:padding="10dp"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:id="@+id/Local_police"
        android:text="@string/Local_police"
        android:background="#80CBC4"
        android:layout_marginTop="114dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/Crisis_centers"
        android:layout_alignStart="@+id/Crisis_centers"
        android:layout_centerInParent="true" />

    <Button
        android:padding="10dp"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:id="@+id/Local_hospital"
        android:text="@string/Local_hospital"
        android:background="#009688"
        android:layout_alignTop="@+id/Crisis_centers"
        android:layout_alignLeft="@+id/Campus_resources"
        android:layout_alignStart="@+id/Campus_resources"
        android:layout_centerInParent="true" />


    <Button
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:id="@+id/Campus_resources"
        android:text="@string/Campus_resources"
        android:background="#a1edc2"
        android:layout_marginRight="59dp"
        android:layout_marginEnd="59dp"
        android:layout_above="@+id/Local_hospital"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>