<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:id="@+id/UNH_button"
        android:drawableTop="@drawable/unh_icon"
        android:background="@android:color/white"
        android:text="@string/UNH"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/Saint_Anselm"
        android:drawableTop="@drawable/sac"
        android:background="@android:color/white"
        android:text="@string/Saint_Anselm"
        android:layout_alignBottom="@+id/UNH_button"
        android:layout_toRightOf="@+id/UNH_button"
        android:layout_toEndOf="@+id/UNH_button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/White_Mountain"
        android:drawableTop="@drawable/wmcc"
        android:background="@android:color/white"
        android:text="@string/White_Mountain"
        android:layout_below="@+id/UNH_button"
        android:layout_toRightOf="@+id/Keene_State"
        android:layout_toEndOf="@+id/Keene_State" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/Keene_State"
        android:drawableTop="@drawable/keene"
        android:background="@android:color/white"
        android:text="@string/Keene_State"
        android:layout_alignBottom="@+id/White_Mountain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>


