<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"


    >
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:id="@+id/relativeLayout">
    <Button

        android:id="@+id/Crisis_centers"
        android:text="@string/Crisis_centers"
        android:drawableTop="@drawable/crisis_center"
        android:padding="15dp"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@drawable/roundedbutton"
        android:layout_marginRight="16dp"
         />

    <Button
        android:id="@+id/Local_hospital"
        android:text="@string/Local_hospital"
        android:drawableTop="@drawable/hospital2"
        android:padding="15dp"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@drawable/roundedbutton"
        android:layout_toEndOf="@id/Crisis_centers"
        android:layout_toRightOf="@id/Crisis_centers"

        />

    <Button
        android:background = "@drawable/roundedbutton"
        android:id="@+id/Campus_resources"
        android:drawableTop="@drawable/campus_resources"
        android:text="@string/Campus_resources"
        android:padding="10dp"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/Local_hospital"

        />
    
    <Button
        android:id="@+id/Local_police"
        android:text="@string/Local_police"
        android:drawableTop="@drawable/police2"
        android:padding="25dp"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:layout_toEndOf="@id/Campus_resources"
        android:layout_below="@id/Crisis_centers"
        android:layout_toRightOf="@id/Campus_resources"/>

    <Button
        android:id="@+id/faq"
        android:text="@string/faq"
        android:padding="25dp"
        android:layout_width="315dp"
        android:layout_height="70dp"
        android:background="@drawable/roundedbutton"
        android:layout_below="@+id/Campus_resources"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />



</RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="472dp"
        android:layout_marginStart="472dp"/>
</RelativeLayout>

<include
layout="@layout/app_bar_main"
android:layout_width="match_parent"
android:layout_height="match_parent" />

<android.support.design.widget.NavigationView
android:id="@+id/nav_view"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
android:fitsSystemWindows="true"
app:headerLayout="@layout/nav_header_main"
app:menu="@menu/activity_main_drawer" />

    </android.support.v4.widget.DrawerLayout>