<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".FAQActivity"
        android:background="@android:color/white">


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:id="@+id/UNH_button"
            android:drawableTop="@drawable/unh_icon"
            android:background="@android:color/white"
            android:text="@string/UNH"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/Saint_Anselm"
            android:drawableTop="@drawable/sac"
            android:background="@android:color/white"
            android:text="@string/Saint_Anselm"
            android:layout_alignBottom="@+id/UNH_button"
            android:layout_toRightOf="@+id/UNH_button"
            android:layout_toEndOf="@+id/UNH_button" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/Keene_State"
            android:drawableTop="@drawable/wmcc"
            android:background="@android:color/white"
            android:text="@string/White_Mountain"
            android:layout_below="@+id/UNH_button"
            android:layout_toRightOf="@+id/White_Mountain"
            android:layout_toEndOf="@+id/White_Mountain" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/White_Mountain"
            android:drawableTop="@drawable/keene"
            android:background="@android:color/white"
            android:text="@string/Keene_State"
            android:layout_alignBottom="@+id/Keene_State"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>


