<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0"
        android:orientation="vertical"


        >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <Button

                android:id="@+id/Crisis_centers"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/crisis_center"
                android:padding="15dp"
                android:text="@string/Crisis_centers"
                android:shadowColor="@color/design_fab_shadow_mid_color"
                android:elevation="2dp" />

            <Button
                android:id="@+id/Local_hospital"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_toEndOf="@id/Crisis_centers"
                android:layout_toRightOf="@id/Crisis_centers"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/hospital2"
                android:padding="15dp"
                android:text="@string/Local_hospital"

                android:shadowColor="@color/design_fab_shadow_mid_color"
                android:elevation="2dp" />

            <Button
                android:id="@+id/Campus_resources"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_below="@id/Local_hospital"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/campus_resources"
                android:padding="10dp"
                android:text="@string/Campus_resources"

                android:shadowColor="@color/design_fab_shadow_mid_color"
                android:elevation="2dp" />

            <Button
                android:id="@+id/Local_police"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_below="@id/Crisis_centers"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/Campus_resources"
                android:layout_toRightOf="@id/Campus_resources"
                android:background="@drawable/rounded_button"
                android:drawableTop="@drawable/police2"
                android:padding="25dp"
                android:text="@string/Local_police"
                android:shadowColor="@color/design_fab_shadow_mid_color"
                android:elevation="2dp" />

            <Button
                android:id="@+id/faq"
                android:layout_width="315dp"
                android:layout_height="70dp"
                android:layout_below="@+id/Campus_resources"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:padding="25dp"
                android:text="@string/faq"
                android:shadowColor="@color/design_fab_shadow_mid_color"
                android:elevation="2dp" />


        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="472dp"
            android:layout_marginStart="472dp" />
    </RelativeLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>